--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	}).addTo(map);
 
+	var popup = L.popup();
+
 	function onMapClick(e) {
 		popup
 			.setLatLng(e.latlng)
