--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			lat_longs_ary.push([lattitude, longitude])
 		}
 		
-		// var polyline = L.polyline(lat_longs_ary, {color: 'red'}).addTo(map);		
+		var polyline = L.polyline(lat_longs_ary, {color: 'red'}).addTo(map);		
 	}
 	
 	var popup = L.popup();
