--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
 	<style>
 		html, body {
@@ -23,42 +23,80 @@
 			max-width: 100%;
 			max-height: 100%;
 		}
-	</style>	
+	</style>
+
+	
 </head>
 <body>
-<div id="map" style="width: 1400px; height: 600px;"></div>
+
+
+<div id="map" style="width: 1400px; height: 600px;"></div><BR>
+<div id="console" style="width: 200px; height: 100px;"></div><BR>
 <script>
-	const map = L.map('map').setView([25.996145, -97.158367], 1.5);
+
+	let boca_chica_latlong = [25.996132, -97.154438];
+1
+	const map = L.map('map').setView(boca_chica_latlong, 10);
 
 	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	}).addTo(map);
+	
+	function showConsole( ip_text ) {
+		var div = document.getElementById("console");
+        var textNode = document.createTextNode(ip_text);
+        div.appendChild(textNode);
+	}
 
+	const boca_chica_marker = L.marker(boca_chica_latlong).addTo(map)
+		.bindPopup('<b>Boca Chica Launch Tower</b><br />[25.996132, -97.154438]').openPopup();
+	let boca_chica_latlong2 = [boca_chica_latlong[0], boca_chica_latlong[1]+360];
+	const boca_chica_marker2 = L.marker(boca_chica_latlong2).addTo(map)
+		.bindPopup('<b>Boca Chica Launch Tower</b><br />[25.996132, -97.154438]').openPopup();
+	let boca_chica_latlong3 = [boca_chica_latlong2[0], boca_chica_latlong2[1]+360];
+	const boca_chica_marker3 = L.marker(boca_chica_latlong3).addTo(map)
+		.bindPopup('<b>Boca Chica Launch Tower</b><br />[25.996132, -97.154438]').openPopup();
+	let boca_chica_latlong4 = [boca_chica_latlong3[0], boca_chica_latlong3[1]+360];
+	const boca_chica_marker4 = L.marker(boca_chica_latlong4).addTo(map)
+		.bindPopup('<b>Boca Chica Launch Tower</b><br />[25.996132, -97.154438]').openPopup();
+		
+
+	let longitude_offset = 228.17185;
+	let inclination_degrees = 31;
+	let orbital_duration_minutes = 94.2;
 	
-		let longitude_offset = 228.18;
-		let inclination_degrees = 31;
-		let orbital_duration_minutes = 93.75;
-		
-		/* Smaller number makes the sin wave longer!! So we invert it! */
-		let percentage_of_a_day = orbital_duration_minutes / ( 24 * 60 );
-		let inverted_orbit_portion_of_day = 1 / (1 + percentage_of_a_day);
-		
-		const lat_longs_ary = []
-		let inverted_orbit_portion_of_day = 0.9406968996;
-		
-		for (let longitude = -97.158367; longitude < (97.158367+360+360+166); longitude++) {
-			let working_longitude = longitude + longitude_offset;
-			let radians = ( working_longitude * Math.PI ) / 180;
-			let lattitude = inclination_degrees * Math.sin(inverted_orbit_portion_of_day * radians);
-			lat_longs_ary.push([lattitude, longitude])
-		}
-		
-		var polyline = L.polyline(lat_longs_ary, {color: 'red'}).addTo(map);		
+	/* Smaller number makes the sin wave longer!! So we invert it! */
+	let percentage_of_a_day = orbital_duration_minutes / ( 24 * 60 );
+	let inverted_orbit_portion_of_day = 1 / (1 + percentage_of_a_day);
 	
-	const boca_chica_marker = L.marker([25.996145, -97.158367]).addTo(map)
-		.bindPopup('<b>Boca Chica Launch Tower</b><br />[25.996145, -97.158367]').openPopup();
+	const lat_longs_ary = []
+	//let inverted_orbit_portion_of_day = 0.9406968996;
+	
+	for (let longitude = boca_chica_latlong[1]; longitude <= (boca_chica_latlong4[1]); longitude++) {
+		let working_longitude = longitude + longitude_offset;
+		let radians = ( working_longitude * Math.PI ) / 180;
+		let lattitude = inclination_degrees * Math.sin(inverted_orbit_portion_of_day * radians);
+		lat_longs_ary.push([lattitude, longitude])
+	}
+	
+	var polyline = L.polyline(lat_longs_ary, {color: 'red'}).addTo(map);
+	
+	var popup = L.popup();
+
+	function onMapClick(e) {
+		showConsole("Hello");
+		popup
+			.setLatLng(e.latlng)
+			.setContent("You clicked the map at " + e.latlng.toString())
+			.openOn(map);
+	}
+
+	map.on('click', onMapClick);
 
 </script>
+
+
+
 </body>
 </html>
